--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site settings
 title: Zachary Chai
-email: your-email@domain.com
+email: zachary.chai@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal website for Zachary Chai
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://zacharychai.com" # the base hostname & protocol for your site
 github_username:  zach-chai
 linkedin_username: zacharychai
 
