--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://zacharychai.com" # the base hostname & protocol for your site
 github_username:  zach-chai
-linkedin_username: zacharychai
+linkedin_username: zachchai
 
 # Build settings
 markdown: kramdown
